# ledger-lens

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.frontend  Makefile  README.md  docker-compose.example.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: api.py  db.py
backend/app/parser/: base.py  moomoo.py  normalizers.py
backend/app/parser/sections/: cash.py  income.py  instruments.py  nav.py  performance.py  positions.py  statement.py  trades.py
backend/app/routers/: cashflows.py  holdings.py  income.py  overview.py  performance.py  timeseries.py  trades.py  upload.py
backend/app/services/: ingestor.py  migration.py  watcher.py
docs/: nas-runner-setup.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/cashflows/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/holdings/: page.tsx
frontend/src/app/income/: page.tsx
frontend/src/app/overview/: page.tsx
frontend/src/app/performance/: page.tsx
frontend/src/app/trades/: page.tsx
frontend/src/app/trends/: page.tsx
frontend/src/components/cashflows/: CashFlowBarChart.tsx  DepositsTable.tsx
frontend/src/context/: BrokerContext.tsx  MobileNavContext.tsx  PrivacyContext.tsx  YearContext.tsx
frontend/src/hooks/: useStatement.ts
frontend/src/lib/: api.ts  formatters.ts  types.ts
(+29 files in other folders)
