[project]
name = "ledger-lens-backend"
version = "1.3.0"
description = "Ledger Lens — IBKR portfolio analysis backend"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.21",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "watchdog>=6.0",
    "python-multipart>=0.0.18",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.8",
    "basedpyright>=1.18",
    "pre-commit>=3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]                   # FastAPI Depends() in default args is intentional

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["app"]
# CSV parser layer uses dict[str, Any] by necessity — untyped external data
reportExplicitAny = "none"
reportAny = "none"
# Suppress warnings for external library type stubs and mocks
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportMissingParameterType = false
reportPrivateUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
